fixed z-index

--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -113,7 +113,7 @@
 
   .footer-contact img {
     width: 25px;
-        margin-top: 10px;
+  
   }
 
   .footer-map {
